--- a/qt/domanic_dialog.ui
+++ b/qt/domanic_dialog.ui
@@ -152,7 +152,7 @@ selection-color: rgb(85, 0, 0);</string>
                 <string/>
                </property>
                <property name="currentIndex">
-                <number>0</number>
+                <number>4</number>
                </property>
                <widget class="QWidget" name="tab_2">
                 <attribute name="title">
@@ -2370,7 +2370,7 @@ selection-color: rgb(85, 0, 0);</string>
                 </attribute>
                 <layout class="QGridLayout" name="gridLayout_56">
                  <item row="1" column="1">
-                  <layout class="QGridLayout" name="gridLayout_54" rowstretch="2,3">
+                  <layout class="QGridLayout" name="gridLayout_54" rowstretch="2">
                    <item row="0" column="0">
                     <layout class="QGridLayout" name="gridLayout_55">
                      <item row="3" column="2">
@@ -2451,101 +2451,105 @@ selection-color: rgb(85, 0, 0);</string>
                      </item>
                     </layout>
                    </item>
+                  </layout>
+                 </item>
+                 <item row="2" column="1">
+                  <layout class="QGridLayout" name="gridLayout_57">
+                   <item row="0" column="0">
+                    <widget class="QLabel" name="label_26">
+                     <property name="font">
+                      <font>
+                       <pointsize>11</pointsize>
+                       <weight>75</weight>
+                       <italic>true</italic>
+                       <bold>true</bold>
+                       <underline>true</underline>
+                      </font>
+                     </property>
+                     <property name="text">
+                      <string>Сравнение интервалов:</string>
+                     </property>
+                    </widget>
+                   </item>
                    <item row="1" column="0">
-                    <layout class="QGridLayout" name="gridLayout_82">
+                    <layout class="QGridLayout" name="gridLayout_84">
+                     <item row="1" column="0">
+                      <widget class="QListWidget" name="listWidget_compare_int"/>
+                     </item>
+                     <item row="2" column="0">
+                      <layout class="QGridLayout" name="gridLayout_85">
+                       <item row="0" column="0">
+                        <widget class="QPushButton" name="pushButton_compare_add_int">
+                         <property name="styleSheet">
+                          <string notr="true">background-color: rgb(191, 255, 191);</string>
+                         </property>
+                         <property name="text">
+                          <string>ADD</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item row="0" column="1">
+                        <widget class="QPushButton" name="pushButton_compare_del_int">
+                         <property name="styleSheet">
+                          <string notr="true">background-color: rgb(255, 185, 185);</string>
+                         </property>
+                         <property name="text">
+                          <string>DEL</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item row="0" column="2">
+                        <widget class="QPushButton" name="pushButton_compare_clear_int">
+                         <property name="styleSheet">
+                          <string notr="true">background-color: rgb(255, 185, 185);</string>
+                         </property>
+                         <property name="text">
+                          <string>CLEAR</string>
+                         </property>
+                        </widget>
+                       </item>
+                      </layout>
+                     </item>
                      <item row="0" column="0">
-                      <widget class="QLabel" name="label_26">
+                      <widget class="QLabel" name="label_27">
                        <property name="font">
                         <font>
-                         <pointsize>11</pointsize>
-                         <weight>75</weight>
+                         <pointsize>8</pointsize>
                          <italic>true</italic>
-                         <bold>true</bold>
-                         <underline>true</underline>
+                         <underline>false</underline>
                         </font>
                        </property>
                        <property name="text">
-                        <string>Сравнение интервалов:</string>
+                        <string>Интервалы:</string>
+                       </property>
+                      </widget>
+                     </item>
+                    </layout>
+                   </item>
+                   <item row="2" column="0">
+                    <layout class="QGridLayout" name="gridLayout_58">
+                     <item row="0" column="0">
+                      <widget class="QLabel" name="label_30">
+                       <property name="font">
+                        <font>
+                         <pointsize>8</pointsize>
+                         <italic>true</italic>
+                         <underline>false</underline>
+                        </font>
+                       </property>
+                       <property name="text">
+                        <string>Параметры:</string>
                        </property>
                       </widget>
                      </item>
                      <item row="1" column="0">
-                      <layout class="QGridLayout" name="gridLayout_83">
+                      <layout class="QGridLayout" name="gridLayout_59">
                        <item row="0" column="0">
-                        <layout class="QGridLayout" name="gridLayout_84">
-                         <item row="2" column="0">
-                          <layout class="QGridLayout" name="gridLayout_85">
-                           <item row="0" column="0">
-                            <widget class="QPushButton" name="pushButton_compare_add_int">
-                             <property name="styleSheet">
-                              <string notr="true">background-color: rgb(191, 255, 191);</string>
-                             </property>
-                             <property name="text">
-                              <string>ADD</string>
-                             </property>
-                            </widget>
-                           </item>
-                           <item row="0" column="1">
-                            <widget class="QPushButton" name="pushButton_compare_del_int">
-                             <property name="styleSheet">
-                              <string notr="true">background-color: rgb(255, 185, 185);</string>
-                             </property>
-                             <property name="text">
-                              <string>DEL</string>
-                             </property>
-                            </widget>
-                           </item>
-                           <item row="0" column="2">
-                            <widget class="QPushButton" name="pushButton_compare_clear_int">
-                             <property name="styleSheet">
-                              <string notr="true">background-color: rgb(255, 185, 185);</string>
-                             </property>
-                             <property name="text">
-                              <string>CLEAR</string>
-                             </property>
-                            </widget>
-                           </item>
-                          </layout>
-                         </item>
+                        <layout class="QGridLayout" name="gridLayout_60">
                          <item row="0" column="0">
-                          <widget class="QLabel" name="label_27">
-                           <property name="font">
-                            <font>
-                             <pointsize>8</pointsize>
-                             <italic>true</italic>
-                             <underline>false</underline>
-                            </font>
-                           </property>
-                           <property name="text">
-                            <string>Интервалы:</string>
-                           </property>
-                          </widget>
-                         </item>
-                         <item row="1" column="0">
-                          <widget class="QListWidget" name="listWidget_compare_int"/>
-                         </item>
-                        </layout>
-                       </item>
-                       <item row="1" column="0">
-                        <layout class="QGridLayout" name="gridLayout_86">
-                         <item row="0" column="0">
-                          <widget class="QLabel" name="label_30">
-                           <property name="font">
-                            <font>
-                             <pointsize>8</pointsize>
-                             <italic>true</italic>
-                             <underline>false</underline>
-                            </font>
-                           </property>
-                           <property name="text">
-                            <string>Параметры:</string>
-                           </property>
-                          </widget>
-                         </item>
-                         <item row="1" column="0">
                           <widget class="QListWidget" name="listWidget_compare_param"/>
                          </item>
-                         <item row="2" column="0">
+                         <item row="1" column="0">
                           <layout class="QGridLayout" name="gridLayout_87">
                            <item row="0" column="0">
                             <widget class="QPushButton" name="pushButton_compare_add_param">
@@ -2581,10 +2585,27 @@ selection-color: rgb(85, 0, 0);</string>
                          </item>
                         </layout>
                        </item>
+                       <item row="0" column="1">
+                        <layout class="QGridLayout" name="gridLayout_79">
+                         <item row="0" column="0">
+                          <widget class="QListWidget" name="listWidget_compare_stat"/>
+                         </item>
+                         <item row="1" column="0">
+                          <widget class="QPushButton" name="pushButton_compare_draw">
+                           <property name="styleSheet">
+                            <string notr="true">background-color: rgb(255, 255, 222);</string>
+                           </property>
+                           <property name="text">
+                            <string>DRAW</string>
+                           </property>
+                          </widget>
+                         </item>
+                        </layout>
+                       </item>
                       </layout>
                      </item>
                      <item row="2" column="0">
-                      <layout class="QGridLayout" name="gridLayout_88">
+                      <layout class="QGridLayout" name="gridLayout_80">
                        <item row="0" column="0">
                         <widget class="QPushButton" name="pushButton_compare_table">
                          <property name="styleSheet">
@@ -2596,16 +2617,6 @@ selection-color: rgb(85, 0, 0);</string>
                         </widget>
                        </item>
                        <item row="0" column="1">
-                        <widget class="QPushButton" name="pushButton_compare_draw">
-                         <property name="styleSheet">
-                          <string notr="true">background-color: rgb(255, 255, 222);</string>
-                         </property>
-                         <property name="text">
-                          <string>DRAW</string>
-                         </property>
-                        </widget>
-                       </item>
-                       <item row="0" column="2">
                         <widget class="QPushButton" name="pushButton_compare_matrix">
                          <property name="styleSheet">
                           <string notr="true">background-color: rgb(255, 255, 222);</string>
@@ -2615,7 +2626,7 @@ selection-color: rgb(85, 0, 0);</string>
                          </property>
                         </widget>
                        </item>
-                       <item row="0" column="3">
+                       <item row="0" column="2">
                         <widget class="QPushButton" name="pushButton_compare_save">
                          <property name="styleSheet">
                           <string notr="true">background-color: rgb(165, 236, 255);</string>
@@ -3552,7 +3563,7 @@ selection-color: rgb(85, 0, 0);</string>
                     <rect>
                      <x>0</x>
                      <y>0</y>
-                     <width>98</width>
+                     <width>91</width>
                      <height>91</height>
                     </rect>
                    </property>
