--- a/qt/domanic_dialog.ui
+++ b/qt/domanic_dialog.ui
@@ -1682,7 +1682,7 @@ selection-color: rgb(85, 0, 0);</string>
                         </layout>
                        </item>
                        <item row="2" column="0">
-                        <layout class="QGridLayout" name="gridLayout_72" columnstretch="3,1">
+                        <layout class="QGridLayout" name="gridLayout_72" columnstretch="5,1,1">
                          <item row="0" column="0">
                           <widget class="QPushButton" name="pushButton_calc_class_lim">
                            <property name="font">
@@ -1701,7 +1701,7 @@ selection-color: rgb(85, 0, 0);</string>
                            </property>
                           </widget>
                          </item>
-                         <item row="0" column="1">
+                         <item row="0" column="2">
                           <widget class="QCheckBox" name="checkBox_save_class_lim">
                            <property name="font">
                             <font>
@@ -1716,6 +1716,21 @@ selection-color: rgb(85, 0, 0);</string>
                            </property>
                            <property name="text">
                             <string>SAVE</string>
+                           </property>
+                          </widget>
+                         </item>
+                         <item row="0" column="1">
+                          <widget class="QCheckBox" name="checkBox_pdf_class">
+                           <property name="font">
+                            <font>
+                             <pointsize>9</pointsize>
+                            </font>
+                           </property>
+                           <property name="styleSheet">
+                            <string notr="true">background-color: rgb(255, 248, 180);</string>
+                           </property>
+                           <property name="text">
+                            <string>PDF</string>
                            </property>
                           </widget>
                          </item>
@@ -1807,8 +1822,8 @@ selection-color: rgb(85, 0, 0);</string>
                          <rect>
                           <x>0</x>
                           <y>0</y>
-                          <width>346</width>
-                          <height>292</height>
+                          <width>408</width>
+                          <height>279</height>
                          </rect>
                         </property>
                         <layout class="QGridLayout" name="gridLayout_75">
@@ -2946,6 +2961,15 @@ selection-color: rgb(85, 0, 0);</string>
                       </color>
                      </brush>
                     </colorrole>
+                    <colorrole role="PlaceholderText">
+                     <brush brushstyle="NoBrush">
+                      <color alpha="128">
+                       <red>0</red>
+                       <green>0</green>
+                       <blue>0</blue>
+                      </color>
+                     </brush>
+                    </colorrole>
                    </active>
                    <inactive>
                     <colorrole role="WindowText">
@@ -3083,6 +3107,15 @@ selection-color: rgb(85, 0, 0);</string>
                       </color>
                      </brush>
                     </colorrole>
+                    <colorrole role="PlaceholderText">
+                     <brush brushstyle="NoBrush">
+                      <color alpha="128">
+                       <red>0</red>
+                       <green>0</green>
+                       <blue>0</blue>
+                      </color>
+                     </brush>
+                    </colorrole>
                    </inactive>
                    <disabled>
                     <colorrole role="WindowText">
@@ -3214,6 +3247,15 @@ selection-color: rgb(85, 0, 0);</string>
                     <colorrole role="ToolTipText">
                      <brush brushstyle="SolidPattern">
                       <color alpha="255">
+                       <red>0</red>
+                       <green>0</green>
+                       <blue>0</blue>
+                      </color>
+                     </brush>
+                    </colorrole>
+                    <colorrole role="PlaceholderText">
+                     <brush brushstyle="NoBrush">
+                      <color alpha="128">
                        <red>0</red>
                        <green>0</green>
                        <blue>0</blue>
@@ -3463,6 +3505,7 @@ selection-color: rgb(85, 0, 0);</string>
                <property name="font">
                 <font>
                  <pointsize>14</pointsize>
+                 <kerning>true</kerning>
                 </font>
                </property>
                <attribute name="title">
@@ -3477,6 +3520,7 @@ selection-color: rgb(85, 0, 0);</string>
                   <property name="font">
                    <font>
                     <pointsize>9</pointsize>
+                    <kerning>true</kerning>
                    </font>
                   </property>
                   <property name="currentIndex">
@@ -3487,8 +3531,8 @@ selection-color: rgb(85, 0, 0);</string>
                     <rect>
                      <x>0</x>
                      <y>0</y>
-                     <width>223</width>
-                     <height>265</height>
+                     <width>225</width>
+                     <height>234</height>
                     </rect>
                    </property>
                    <attribute name="label">
@@ -3503,6 +3547,7 @@ selection-color: rgb(85, 0, 0);</string>
                       <property name="font">
                        <font>
                         <pointsize>8</pointsize>
+                        <kerning>true</kerning>
                        </font>
                       </property>
                      </widget>
@@ -3514,8 +3559,8 @@ selection-color: rgb(85, 0, 0);</string>
                     <rect>
                      <x>0</x>
                      <y>0</y>
-                     <width>223</width>
-                     <height>265</height>
+                     <width>225</width>
+                     <height>234</height>
                     </rect>
                    </property>
                    <attribute name="label">
@@ -3530,6 +3575,7 @@ selection-color: rgb(85, 0, 0);</string>
                       <property name="font">
                        <font>
                         <pointsize>8</pointsize>
+                        <kerning>true</kerning>
                        </font>
                       </property>
                      </widget>
@@ -3553,6 +3599,7 @@ selection-color: rgb(85, 0, 0);</string>
                   <property name="font">
                    <font>
                     <pointsize>9</pointsize>
+                    <kerning>true</kerning>
                    </font>
                   </property>
                   <property name="currentIndex">
@@ -3563,8 +3610,8 @@ selection-color: rgb(85, 0, 0);</string>
                     <rect>
                      <x>0</x>
                      <y>0</y>
-                     <width>91</width>
-                     <height>91</height>
+                     <width>98</width>
+                     <height>88</height>
                     </rect>
                    </property>
                    <attribute name="label">
@@ -3579,6 +3626,7 @@ selection-color: rgb(85, 0, 0);</string>
                       <property name="font">
                        <font>
                         <pointsize>8</pointsize>
+                        <kerning>true</kerning>
                        </font>
                       </property>
                      </widget>
@@ -3590,8 +3638,8 @@ selection-color: rgb(85, 0, 0);</string>
                     <rect>
                      <x>0</x>
                      <y>0</y>
-                     <width>223</width>
-                     <height>265</height>
+                     <width>225</width>
+                     <height>234</height>
                     </rect>
                    </property>
                    <attribute name="label">
@@ -3606,6 +3654,7 @@ selection-color: rgb(85, 0, 0);</string>
                       <property name="font">
                        <font>
                         <pointsize>8</pointsize>
+                        <kerning>true</kerning>
                        </font>
                       </property>
                      </widget>
@@ -3642,6 +3691,7 @@ selection-color: rgb(85, 0, 0);</string>
                   <property name="font">
                    <font>
                     <pointsize>8</pointsize>
+                    <kerning>true</kerning>
                    </font>
                   </property>
                  </widget>
@@ -3764,7 +3814,7 @@ selection-color: rgb(85, 0, 0);</string>
      <x>0</x>
      <y>0</y>
      <width>1292</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
