--- a/qt/domanic_dialog.ui
+++ b/qt/domanic_dialog.ui
@@ -522,131 +522,29 @@ selection-color: rgb(85, 0, 0);</string>
                    </item>
                    <item row="0" column="0">
                     <layout class="QGridLayout" name="gridLayout_46">
-                     <item row="2" column="0">
-                      <layout class="QGridLayout" name="gridLayout_47">
-                       <item row="0" column="1">
-                        <widget class="QComboBox" name="comboBox_dash_tablet">
-                         <property name="font">
-                          <font>
-                           <pointsize>8</pointsize>
-                          </font>
-                         </property>
-                         <property name="toolTip">
-                          <string>штрих кривой</string>
-                         </property>
-                         <item>
-                          <property name="text">
-                           <string>__________</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>.................</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>- - - - - - - - - </string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>-.-.-.-.-.-.-.-.</string>
-                          </property>
-                         </item>
-                        </widget>
-                       </item>
-                       <item row="0" column="3">
-                        <widget class="QComboBox" name="comboBox_type_graph">
-                         <item>
-                          <property name="text">
-                           <string>bar</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>stem</string>
-                          </property>
-                         </item>
-                        </widget>
-                       </item>
-                       <item row="0" column="2">
-                        <widget class="QComboBox" name="comboBox_width_tablet">
-                         <property name="font">
-                          <font>
-                           <pointsize>8</pointsize>
-                          </font>
-                         </property>
-                         <property name="toolTip">
-                          <string>толщина кривой</string>
-                         </property>
-                         <item>
-                          <property name="text">
-                           <string>1</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>1.5</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>2</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>2.5</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>3</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>4</string>
-                          </property>
-                         </item>
-                        </widget>
-                       </item>
-                       <item row="0" column="0">
-                        <widget class="QPushButton" name="pushButton_color_tablet">
-                         <property name="text">
-                          <string>color</string>
-                         </property>
-                        </widget>
-                       </item>
-                      </layout>
+                     <item row="0" column="0">
+                      <spacer name="horizontalSpacer_4">
+                       <property name="orientation">
+                        <enum>Qt::Horizontal</enum>
+                       </property>
+                       <property name="sizeHint" stdset="0">
+                        <size>
+                         <width>40</width>
+                         <height>0</height>
+                        </size>
+                       </property>
+                      </spacer>
                      </item>
-                     <item row="1" column="0">
+                     <item row="2" column="0">
                       <layout class="QGridLayout" name="gridLayout_48">
                        <item row="0" column="0">
                         <layout class="QGridLayout" name="gridLayout_49">
-                         <item row="1" column="0">
+                         <item row="0" column="0">
                           <widget class="QListWidget" name="listWidget_param_tablet">
                            <property name="font">
                             <font>
                              <pointsize>9</pointsize>
                             </font>
-                           </property>
-                          </widget>
-                         </item>
-                         <item row="0" column="0">
-                          <widget class="QLabel" name="label_param_tablet">
-                           <property name="font">
-                            <font>
-                             <pointsize>11</pointsize>
-                             <weight>75</weight>
-                             <italic>true</italic>
-                             <bold>true</bold>
-                             <underline>true</underline>
-                            </font>
-                           </property>
-                           <property name="text">
-                            <string>Параметры для планшета:</string>
                            </property>
                           </widget>
                          </item>
@@ -769,18 +667,134 @@ selection-color: rgb(85, 0, 0);</string>
                        </item>
                       </layout>
                      </item>
-                     <item row="0" column="0">
-                      <spacer name="horizontalSpacer_4">
-                       <property name="orientation">
-                        <enum>Qt::Horizontal</enum>
-                       </property>
-                       <property name="sizeHint" stdset="0">
-                        <size>
-                         <width>40</width>
-                         <height>0</height>
-                        </size>
-                       </property>
-                      </spacer>
+                     <item row="3" column="0">
+                      <layout class="QGridLayout" name="gridLayout_47">
+                       <item row="0" column="1">
+                        <widget class="QComboBox" name="comboBox_dash_tablet">
+                         <property name="font">
+                          <font>
+                           <pointsize>8</pointsize>
+                          </font>
+                         </property>
+                         <property name="toolTip">
+                          <string>штрих кривой</string>
+                         </property>
+                         <item>
+                          <property name="text">
+                           <string>__________</string>
+                          </property>
+                         </item>
+                         <item>
+                          <property name="text">
+                           <string>.................</string>
+                          </property>
+                         </item>
+                         <item>
+                          <property name="text">
+                           <string>- - - - - - - - - </string>
+                          </property>
+                         </item>
+                         <item>
+                          <property name="text">
+                           <string>-.-.-.-.-.-.-.-.</string>
+                          </property>
+                         </item>
+                        </widget>
+                       </item>
+                       <item row="0" column="3">
+                        <widget class="QComboBox" name="comboBox_type_graph">
+                         <item>
+                          <property name="text">
+                           <string>bar</string>
+                          </property>
+                         </item>
+                         <item>
+                          <property name="text">
+                           <string>stem</string>
+                          </property>
+                         </item>
+                        </widget>
+                       </item>
+                       <item row="0" column="2">
+                        <widget class="QComboBox" name="comboBox_width_tablet">
+                         <property name="font">
+                          <font>
+                           <pointsize>8</pointsize>
+                          </font>
+                         </property>
+                         <property name="toolTip">
+                          <string>толщина кривой</string>
+                         </property>
+                         <item>
+                          <property name="text">
+                           <string>1</string>
+                          </property>
+                         </item>
+                         <item>
+                          <property name="text">
+                           <string>1.5</string>
+                          </property>
+                         </item>
+                         <item>
+                          <property name="text">
+                           <string>2</string>
+                          </property>
+                         </item>
+                         <item>
+                          <property name="text">
+                           <string>2.5</string>
+                          </property>
+                         </item>
+                         <item>
+                          <property name="text">
+                           <string>3</string>
+                          </property>
+                         </item>
+                         <item>
+                          <property name="text">
+                           <string>4</string>
+                          </property>
+                         </item>
+                        </widget>
+                       </item>
+                       <item row="0" column="0">
+                        <widget class="QPushButton" name="pushButton_color_tablet">
+                         <property name="text">
+                          <string>color</string>
+                         </property>
+                        </widget>
+                       </item>
+                      </layout>
+                     </item>
+                     <item row="1" column="0">
+                      <layout class="QGridLayout" name="gridLayout_83">
+                       <item row="0" column="0">
+                        <widget class="QLabel" name="label_param_tablet_3">
+                         <property name="font">
+                          <font>
+                           <pointsize>11</pointsize>
+                           <weight>75</weight>
+                           <italic>true</italic>
+                           <bold>true</bold>
+                           <underline>true</underline>
+                          </font>
+                         </property>
+                         <property name="text">
+                          <string>Параметры для планшета:</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item row="0" column="1">
+                        <widget class="QCheckBox" name="checkBox_tablet_interval">
+                         <property name="toolTip">
+                          <string>отобразить на планшете пользовательские интервалы, выбранные на 5й вкладке </string>
+                         </property>
+                         <property name="text">
+                          <string>отобразить интервалы</string>
+                         </property>
+                        </widget>
+                       </item>
+                      </layout>
                      </item>
                     </layout>
                    </item>
@@ -3610,7 +3624,7 @@ selection-color: rgb(85, 0, 0);</string>
                     <rect>
                      <x>0</x>
                      <y>0</y>
-                     <width>98</width>
+                     <width>88</width>
                      <height>88</height>
                     </rect>
                    </property>
